Fix dropdown navigation by removing overflow: auto

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -108,8 +108,6 @@ h1 {
 
 .nav {
   background: $purple;
-  overflow: auto;
-  margin: 0 auto;
 }
 
 .nav2 {
